--- a/Yasser_Ahmed_Portfolio.html
+++ b/Yasser_Ahmed_Portfolio.html
@@ -180,6 +180,7 @@
             <h2>Call to Action and Contact Information</h2> 
             <p>Contact me:</p> 
             <ul> 
+                <li><strong>Résumé</strong>: <a href="https://drive.google.com/drive/folders/1QZLb1wvcIOEULS8MaPPAkqTzKQJ4tEHn?usp=drive_link">Yasser Ahmed NW Auto engineer</a></li>
                 <li><strong>LinkedIn</strong>: <a href="https://linkedin.com/in/yasser-tolba">/in/yasser-tolba</a></li> 
                 <li><strong>GitHub</strong>: <a href="https://github.com/yassertolba">yassertolba</a></li>
                 <li><strong>Phone</strong>: +201271653370 (Mobile)</li> 
