--- a/Yasser_Ahmed_Portfolio.html
+++ b/Yasser_Ahmed_Portfolio.html
@@ -180,10 +180,10 @@
             <h2>Call to Action and Contact Information</h2> 
             <p>Contact me:</p> 
             <ul> 
-                <li><strong>Résumé</strong>: <a href="https://drive.google.com/drive/folders/1QZLb1wvcIOEULS8MaPPAkqTzKQJ4tEHn?usp=drive_link">Yasser Ahmed NW Auto engineer</a></li>
-                <li><strong>LinkedIn</strong>: <a href="https://linkedin.com/in/yasser-tolba">/in/yasser-tolba</a></li> 
-                <li><strong>GitHub</strong>: <a href="https://github.com/yassertolba">yassertolba</a></li>
+                <li><strong>Résumé</strong>: <a href="https://drive.google.com/drive/folders/1QZLb1wvcIOEULS8MaPPAkqTzKQJ4tEHn?usp=drive_link" target="_blank">Yasser Ahmed NW Auto engineer</a></li>
+                <li><strong>LinkedIn</strong>: <a href="https://linkedin.com/in/yasser-tolba" target="_blank">/in/yasser-tolba</a></li> 
+                <li><strong>GitHub</strong>: <a href="https://github.com/yassertolba" target="_blank">yassertolba</a></li>
                 <li><strong>Phone</strong>: +201271653370 (Mobile)</li> 
-                <li><strong>Email</strong>: <a href="mailto:yasser.a.tolba@gmail.com">yasser.a.tolba@gmail.com</a></li> 
+                <li><strong>Email</strong>: <a href="mailto:yasser.a.tolba@gmail.com" target="_blank">yasser.a.tolba@gmail.com</a></li> 
             </ul> 
         </div>
