--- a/Yasser_Ahmed_Portfolio.html
+++ b/Yasser_Ahmed_Portfolio.html
@@ -161,7 +161,7 @@
                 <div class="project">
                     <h3>Dockerized Resource Monitor App</h3>
                     <p>Real-time system resource insights with features like detailed logging and customization.</p>
-                    <p><strong>Code</strong>: <a href="https://github.com/yassertolba/DEPI-R2-Marathon-1-devops-project">Check out the code</a></p>
+                    <p><strong>Code</strong>: <a href="https://github.com/yassertolba/DEPI-R2-Marathon-1-devops-project" target="_blank">Check out the code</a></p>
                 </div>
             </div>
         </div>
